<resources>
    <string name="app_name">Catálogos</string>
    <string name="action_settings">Configuración</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_auction_detail">Detalle</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_edit">Editar</string>
    <string name="title_activity_add_edit">Añadir/Editar Subasta</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="field_error">Ingresa un valor</string>
    <string name="action_delete">Eliminar</string>
    <string name="manage_auctions_house">Gestión de Casas de Subastas</string>
    <string name="manage_cities">Gestionar Ciudades</string>
    <string name="auctions_house">Casas de Subastas</string>
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>
    <string name="search_web__imagen">Buscar Imagen en Web</string>
    <string name="search_local__imagen">Buscar Imagen en local</string>
    <string name="cities">Ciudades</string>
    <string name="add_edit_city">Añadir/Editar Ciudad</string>
    <string name="detail_city">Detalle de Ciudad</string>
    <string name="countries">Paises</string>
    <string name="add_edit_country">Editar País</string>
    <string name="detail_country">Detalle de País</string>
    <string name="manage_countries">Gestión de Países</string>
    <string name="jeweltypes">Tipo de Joya</string>
    <string name="add_edit_jeweltype">Editar Tipo de Joya</string>
    <string name="detail_jeweltype">Detalle de Tipo de Joya</string>
    <string name="manage_jeweltypes">Gestión de Tipos de Joyas</string>
    <string name="designers">Diseñadores</string>
    <string name="add_edit_designer">Editar Diseñadores</string>
    <string name="detail_designer">Eliminar Diseñadores</string>
    <string name="manage_designers">Gestión de Diseñadores</string>
    <string name="empty_list">No existen datos</string>
    <string name="cuts">Tallas</string>
    <string name="add_edit_cut">Editar Tallas</string>
    <string name="detail_cut">Eliminar Tallas</string>
    <string name="manage_cuts">Gestión de Tipos de Tallas</string>
    <string name="manage_owners">Gestión de Propietarios</string>
    <string name="owners">Propietarios</string>
    <string name="add_edit_owner">Editar Propietarios</string>
    <string name="detail_owner">Detalle de Propietario</string>
    <string name="manage_gemstones">Gestión de Piedras Preciosas</string>
    <string name="gemstones">Piedras Preciosas</string>
    <string name="add_edit_gemstone">Editar Piedra Preciosa</string>
    <string name="detail_gemstone">Eliminar Piedra Preciosas</string>
    <string name="name">Nombre</string>
    <string name="periods">Periodos</string>
    <string name="add_edit_period">Editar Periodo</string>
    <string name="detail_period">Detalle de Periodo</string>
    <string name="manage_periods">"Gestión de Periodos "</string>
    <string name="init_year">Año de Inicio</string>
    <string name="final_year">Año Final</string>
    <string name="period">Periodo</string>
    <string name="from">Desde</string>
    <string name="to">Hasta</string>
    <string name="auction">Subasta</string>
    <string name="city">Ciudad</string>
    <string name="auction_house">Casa de Subastas</string>
    <string name="date">Fecha</string>
    <string name="searching">Buscar...</string>
    <string name="searching_city">Buscar Ciudad</string>
    <string name="searching_auction_house">Buscar Casa de Subastas</string>
    <string name="searching_auction">Buscar Subastas</string>
    <string name="date_error">"Error de formato de Fecha. Debe ser dd-mm-aaaa "</string>
    <string name="jewel">Joya</string>
    <string name="serial">Nº de serie</string>
    <string name="designer">Diseñador</string>
    <string name="jewel_name">Nombre de la Joya</string>
    <string name="todo">TODO</string>
    <string name="obs">Observaciones</string>
    <string name="searching_designer">Buscar Diseñador</string>
    <string name="searching_jewel_type">Buscar Tipo de Joya</string>
    <string name="searching_period">Buscar Periodo</string>
    <string name="jewels">Joyas</string>
    <string name="title_activity_jewel_detail">Detalle de Joyas</string>
    <string name="searching_owners">Buscar Propietarios</string>
    <string name="lots">Lotes</string>
    <string name="title_activity_lot_detail">Detalle de lote</string>
    <string name="designed_by">Diseñado por</string>
    <string name="owned_to">Perteneció a:</string>
    <string name="of">de</string>
    <string name="epoque">Del periodo</string>
    <string name="searching_gemstones">Buscar Piedras preciosas</string>
    <string name="catalogues">Catálogos</string>
    <string name="data">Datos</string>
    <string name="auctions">Subastas</string>
    <string name="country">País</string>
    <string name="searching_country">Buscar País</string>
    <string name="lot">Lote</string>
    <string name="jewel_search">Buscar Joya</string>
    <string name="limpiar_formulario">Limpiar Formulario</string>
    <string name="home">Ir al Inicio</string>
    <string name="date_from">Fecha desde</string>
    <string name="date_to">Fecha hasta</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="error">ERROR</string>
    <string name="login">LogIn</string>
    <string name="create_pdf">Crear PDF</string>
    <string name="hallmarks">Sellos</string>
</resources>