<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".designers_package.designer_detail.DesignerDetailActivity">
    <item
        android:id="@+id/manage_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home"
        android:visible="true"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="1"
        android:title="@string/action_edit"
        android:icon="@drawable/ic_pencil"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="2"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete"
        app:showAsAction="ifRoom" />
</menu>
