<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="24dp"
    android:layout_marginEnd="@dimen/activity_horizontal_margin"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textview1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/serial"
        android:textColor="#000000"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/designer"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_designer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/jeweltypes"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_jewelType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/textview3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/period"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_gemstones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_gemstones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/gemstones"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/l_gemstones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <LinearLayout
            android:id="@+id/ll_owners"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title_owners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/owners"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/l_owners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scrollbars="vertical" />
        </LinearLayout>

    </LinearLayout>


    <TextView
        android:id="@+id/textview4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/obs"
        android:textColorHint="#000000"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/et_obs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
