<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_rowWeight="1"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp"
        android:columnCount="3"
        android:foregroundGravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".general_data.GeneralDataFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_auctions_houses"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_auction_svgrepo_com"
                android:gravity="center"
                android:text="@string/auctions_house" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_cities"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_baseline_location_city_24"
                android:gravity="center"
                android:text="@string/cities" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_countries"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_baseline_language_24"
                android:gravity="center"
                android:text="@string/countries" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_jewels_types"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_necklace_svgrepo_com"
                android:gravity="center"
                android:text="@string/jeweltypes" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_designers"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_jewelry_department_gem_jewelry_svgrepo_com"
                android:gravity="center"
                android:text="@string/designers" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_hallmarks"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_baseline_anchor_24_black"
                android:gravity="center"
                android:text="@string/hallmarks" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_cuts"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_jewelry_gemstone_heart_love_valentine_svgrepo_com"
                android:gravity="center"
                android:text="@string/cuts" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_owners"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_jeweler_jewelry_repair_svgrepo_com"
                android:gravity="center"
                android:text="@string/owners" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_gemstones"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_jewel_svgrepo_com"
                android:gravity="center"
                android:text="@string/gemstones" />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/btn_periods"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="5dp"
            app:cardBackgroundColor="@color/colorAccent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:drawableTop="@drawable/ic_navigation_history_interface_symbol_of_a_clock_with_an_arrow_svgrepo_com"
                android:gravity="center"
                android:text="@string/periods" />

        </androidx.cardview.widget.CardView>

    </GridLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>